<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/set_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/txt_hunt_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_set_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_set_name"
        app:layout_constraintStart_toEndOf="@+id/set_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/set_odds"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/odds_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_name" />

    <Button
        android:id="@+id/btn_set_odds"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_set_odds"
        app:layout_constraintStart_toEndOf="@+id/set_odds"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_name" />

    <EditText
        android:id="@+id/set_counter"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/set_counter_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_odds" />

    <Button
        android:id="@+id/btn_set_counter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_set_count"
        app:layout_constraintStart_toEndOf="@+id/set_counter"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_odds" />

    <Spinner
        android:id="@+id/set_status"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:entries="@array/hunt_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_counter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/set_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:contentDescription="@string/FAB_set_button_des"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_set_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_set_status"
        app:layout_constraintStart_toEndOf="@+id/set_status"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_counter" />

    <Button
        android:id="@+id/btnGoToHunt"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_hunt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>